--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <a class="brand" href="index.html">Android Tour Per&uacute;</a>
 
-                <a class="brand" href="http://www.gdglima.pe">GDGLima</a>
+                <a class="brand" href="http://www.gdglima.pe" target="_blank">GDGLima</a>
 
                      <a class="brand" href="#evenbrite" style="color:red;">Regístrate ahora!</a>
 
@@ -102,7 +102,13 @@
         <canvas id="canvasapp" width="1024" height="400">
         </canvas>
       </div>
-
+<br>
+        <div align="center"><b>¿Quieres aparecer arriba en los círculos?, envía un tweet con el hashtag:</b>
+          <a  href="https://twitter.com/share" data-text="#AndroidTourPeru" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru" target="blank">
+            <b style="color:#4d8cf6;">
+#AndroidTourPeru</b>
+</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> </div>
+<br>
       <!-- Example row of columns -->
       <div class="container">
           <div class="row text-center">
@@ -135,7 +141,7 @@
 
 
 
-<br><br><br><br>
+<br><br>
 <div class="container3">
   <br>
      <h2 align="center">Con la participación de:</h2>
@@ -145,7 +151,7 @@
             <div class="ch-item ch-img-19">
               <div class="ch-info">
                <h3>GDGLima</h3>
-                <p>Google Developer Group<a href="http://gplus.to/gdglima2">GPlus</a></p>
+                <p>Google Developer Group<a href="http://gplus.to/gdglima2" target="_blank">GPlus</a></p>
               </div>
             </div>
           </li>
@@ -153,7 +159,7 @@
             <div class="ch-item ch-img-20">
               <div class="ch-info">
                 <h3>David C.</h3>
-                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch" target="_blank">GPlus</a></p>
               </div>
             </div>
           </li>
@@ -201,13 +207,13 @@
     <footer>
 
       <p class="pull-left">
-        <a href="#">@2013 GDGLima</a>
+        <a href="#">Hashtag del evento:</a>
         <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> | -->
         <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
         <a href="#" target="new">Back to top</a>
       </p>
