--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -122,7 +122,7 @@
             <div class="row">
 
               <div class="span9">
-                <p>El <b>GDG Android Tour Per&uacute;</b> es un conjunto de eventos gratuitos que son organizados por la comunidad <b><a href="http://plus.google.com/106035957065756239824">+GDG Lima</a></b> y <b> <a href="http://plus.google.com/117950001026140632430/">+GDG Arequipa</a></b> que buscan difundir el ecosistema de desarrollo y emprendimiento m&oacute;vil utilizando Android en Per&uacute;.</p>
+                <p>El <b>GDG Android Tour Per&uacute;</b> es un conjunto de eventos gratuitos que son organizados por la comunidad <b><a href="http://plus.google.com/106035957065756239824" target="_blank">+GDG Lima</a></b> y <b> <a href="http://plus.google.com/117950001026140632430/" target="_blank">+GDG Arequipa</a></b> que buscan difundir el ecosistema de desarrollo y emprendimiento m&oacute;vil utilizando Android en Per&uacute;.</p>
               </div>
             </div>
             <div class="row">
@@ -148,13 +148,13 @@
     <footer>
 
       <p class="pull-left">
-        <a href="#">@2013 GDGLima</a>
+        <a href="#">Hashtag del evento:</a>
         <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> | -->
         <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
         <a href="#" target="new">Back to top</a>
       </p>
