--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -144,45 +144,6 @@
         </div>
     	</div><!-- /.row -->
 
-
-      <!-- CATALAN  -->
-      <div class="row">
-
-        <div class="span12">
-          <div class="row">
-            <div class="span3">
-              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
-              <div class="container2">
-                <section class="main">
-                   <ul class="ch-grid">
-                    <li>
-                      <div class="ch-item ch-img-23">
-                        <div class="ch-info-wrap">
-                          <div class="ch-info">
-                            <div class="ch-info-front ch-img-1"></div>
-                            <div class="ch-info-back">
-                              <h3>Adrian C.</h3>
-                          <p>GDG Guatemala<a href="https://plus.google.com/u/0/105961284541566561789/posts" target="_new">GPlus</a></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
-                </section>
-              </div>
-            </div>
-            <div class="span9">
-              <h3>Adrian Catal&aacute;n</h3>
-              <h4>Google Developer Expert</h4>
-              <div class="hr"><hr /></div>
-              <p>Adrián Catalán es co fundador de Elemental Geeks y co fundador del Google Developers Group Guatemala. Cuenta con estudios de pregrado en informática y telecomunicaciones y de postgrado en seguridad informática, redes, administración de negocios y tecnología educativa, recientemente fue visiting scholar en Purdue University donde trabajó en investigación del área humano-computador. Catedrático universitario desde el 2006, ha dictado diversos cursos y conferencias en Guatemala, Honduras y México. Se considera a sí mismo educador, desarrollador de software, curioso, soñador y entusiasta. Sus principales intereses son móviles, creatividad, innovación, entrepreneurship y todo lo que se puede construir con estas herramientas.</p>
-            </div>
-          </div>
-        </div>
-      </div><!-- /.row -->
-
-
       <!-- FEDERICO -->
         <div class="row">
 
@@ -211,8 +172,8 @@
               </div>
             </div>
             <div class="span9">
-              <h3>Federico Castoldi</h3>
-              <h4>Google Developer Expert</h4>
+              <h3>Federico Castoldi <img src="assets/images/ho.png" style="width:30px; height:30px; margin-top:-15px;"><b> (vía HO) </b></img></h3>
+              <h4>GDG Santa Fe Lead</h4>
               <div class="hr"><hr /></div>
               <p>
               Uno de los fundadores del Grupo de Investigación y Desarrollo en Dispositivos Móviles (GIDETEM) en la Facultad de Ingeniería y Ciencias Hídricas de la Universidad Nacional Del Litoral conformado por Alumnos, Docentes y Graduados a fines de 2011. En el mismo desarrolló su Proyecto final de carrera “DomoMovil” concluyendo su investigación iniciada en 2008 con domótica y desarrollando un producto conformado por una aplicación ANDROID. El mismo fué premiado por Innovar el <a href="http://www.innovar.gob.ar" target="_new">concurso de Innovación Tecnológica</a> de la Nación funcionando en Tecnópolis como muestra de innovación nacional. En la cual sigue desarrollando su conocimiento en perfeccionar este sistema.</p>
@@ -224,6 +185,210 @@
           </div>
         </div>
       </div><!-- /.row -->
+
+
+<!-- CATALAN  -->
+      <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-23">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Adrian C.</h3>
+                          <p>GDG Guatemala<a href="https://plus.google.com/u/0/105961284541566561789/posts" target="_new">GPlus</a></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Adrian Catal&aacute;n <img src="assets/images/ho.png" style="width:30px; height:30px; margin-top:-15px;"><b> (vía HO) </b></img></h3>
+              <h4>GDG Guatemala Lead</h4>
+              <div class="hr"><hr /></div>
+              <p>Adrián Catalán es co fundador de Elemental Geeks y co fundador del Google Developers Group Guatemala. Cuenta con estudios de pregrado en informática y telecomunicaciones y de postgrado en seguridad informática, redes, administración de negocios y tecnología educativa, recientemente fue visiting scholar en Purdue University donde trabajó en investigación del área humano-computador. Catedrático universitario desde el 2006, ha dictado diversos cursos y conferencias en Guatemala, Honduras y México. Se considera a sí mismo educador, desarrollador de software, curioso, soñador y entusiasta. Sus principales intereses son móviles, creatividad, innovación, entrepreneurship y todo lo que se puede construir con estas herramientas.</p>
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
+      <!-- HERNAN QUINTANA -->
+        <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-25">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Hernán Q.</h3>
+                          <p>Invitado<a href="http://gplus.to/hernanquintana" target="_new">GPlus</a></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Hernán Quintana</h3>
+              <h4>Android Developer (Invitado)</h4>
+              <div class="hr"><hr /></div>
+              <p>
+              Invitado especial.</p>
+
+
+
+
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
+
+
+<!-- EDUARDO MEDINA -->
+        <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-26">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Eduardo M.</h3>
+                          <p>GDGLima<a href="http://gplus.to/emedinaa" target="_new">GPlus</a></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Eduardo Medina</h3>
+              <h4>Android Developer (GDGLima)</h4>
+              <div class="hr"><hr /></div>
+              <p>
+              Empresario e investigador, participa activamente en varias comunidades relacionadas a tecnologías como el IGDA y el GDG Lima. CEO QuickDev, empresa de Desarrollo Interactivo, Game y Mobile Developer. Instructor de Desarrollo Mobile, Videojuegos y Web. Director de Asuntos con la Comunidad IGDA Perú (International Game Developers  Association) Organizer GDG Lima - GDG Arequipa (Google Developer Group).
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
+      <!-- MEISON CHIRINOS -->
+        <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-27">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Meison C.</h3>
+                          <p>GDGLima<a href="http://gplus.to/ameison" target="_new">GPlus</a></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Meison Chirinos</h3>
+              <h4>Android Developer (GDGLima)</h4>
+              <div class="hr"><hr /></div>
+              <p>
+              Meison es Bachiller de Ingeniería de Sistemas de la Universidad Nacional Mayor de San Marcos UNMSM, durante este último año ha trabajado como desarrollador en proyectos multicanal con Android y Google App Engine. Con algunos años de experiencia en el desarrollo de Aplicaciones Web con Java, interesado en acumular experiencia en el uso de la plataforma cloud de Google.</p>
+
+
+
+
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
+
+<!-- DIEGO URBINA -->
+        <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-28">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Alévandië</h3>
+                          <p>GDGLima<a href="http://gplus.to/alevandie" target="_new">GPlus</a></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Diego Urbina</h3>
+              <h4>Technologist and Researcher (GDGLima)</h4>
+              <div class="hr"><hr /></div>
+              <p>
+              Tecnólogo, investigador, empresario, escritor, conferencista, Ingeniero de Sistemas y geek. Actualmente es tesista en Tratamientos de "Arquitecturas de Bases de Datos Difusas" y se desarrolla como Profesor en Ciencias de la Computación e Ingeniería Artificial y QA en la Fuerza Aérea del Perú. Organizer del GDG Lima y blogger en <a href="http://lookthiscode.blogspot.com" target="_new">Lookthiscode. </a>(Blog oficial de Google).</p>
+
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
+
     </div>
 
     <br><br>
@@ -232,13 +397,13 @@
     <footer>
 
       <p class="pull-left">
-        <a href="#">@2013 GDGLima</a>
+        <a href="#">Hashtag del evento:</a>
         <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |-->
         <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
         <a href="#" target="new">Back to top</a>
       </p>
