--- a/nav_team.html
+++ b/nav_team.html
@@ -113,7 +113,7 @@
             <div class="ch-item ch-img-5">
               <div class="ch-info">
                <h3>Juan Jose</h3>
-                <p>Rodríguez<a href="http://gplus.to/jrodriguezv10">GDGLima</a></p>
+                <p>Rodríguez<a href="http://gplus.to/jrodriguezv10" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -121,7 +121,7 @@
             <div class="ch-item ch-img-10">
               <div class="ch-info">
                 <h3>Lennon</h3>
-                <p>Shimokawa<a href="http://gplus.to/lshimokawa">GDGLima</a></p>
+                <p>Shimokawa<a href="http://gplus.to/lshimokawa" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -129,7 +129,7 @@
             <div class="ch-item ch-img-1">
               <div class="ch-info">
                <h3>Eduardo</h3>
-                <p>Medina Alfaro <a href="http://gplus.to/emedinaa">GDGLima</a></p>
+                <p>Medina Alfaro <a href="http://gplus.to/emedinaa" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -137,7 +137,7 @@
             <div class="ch-item ch-img-4">
               <div class="ch-info">
                 <h3>Alévandië</h3>
-                <p>Urbina López <a href="http://gplus.to/alevandie">GDGLima</a></p>
+                <p>Urbina López <a href="http://gplus.to/alevandie" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -145,7 +145,7 @@
             <div class="ch-item ch-img-6">
               <div class="ch-info">
                 <h3>Roxana</h3>
-                <p>Panaqué Cávana<a href="http://gplus.to/rbpanaque">GDGLima</a></p>
+                <p>Panaqué Cávana<a href="http://gplus.to/rbpanaque" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -163,7 +163,7 @@
             <div class="ch-item ch-img-1">
               <div class="ch-info">
                <h3>Eduardo</h3>
-                <p>Medina Alfaro <a href="http://gplus.to/emedinaa">GDGLima</a></p>
+                <p>Medina Alfaro <a href="http://gplus.to/emedinaa" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -171,7 +171,7 @@
             <div class="ch-item ch-img-2">
               <div class="ch-info">
                 <h3>Manuel</h3>
-                <p>Rivera Cuzco<a href="http://gplus.to/manuelrc">GDGLima</a></p>
+                <p>Rivera Cuzco<a href="http://gplus.to/manuelrc" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -179,7 +179,7 @@
             <div class="ch-item ch-img-3">
               <div class="ch-info">
                 <h3>Carlos</h3>
-                <p>Piñan Indacochea <a href="http://gplus.to/carlospinan">GDGLima</a></p>
+                <p>Piñan Indacochea <a href="http://gplus.to/carlospinan" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -187,14 +187,22 @@
             <div class="ch-item ch-img-4">
               <div class="ch-info">
                 <h3>Alévandië</h3>
-                <p>Urbina López <a href="http://gplus.to/alevandie">GDGLima</a></p>
+                <p>Urbina López <a href="http://gplus.to/alevandie" target="_blank">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+           <li>
+            <div class="ch-item ch-img-5">
+              <div class="ch-info">
+               <h3>Juan Jose</h3>
+                <p>Rodríguez<a href="http://gplus.to/jrodriguezv10" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
 <br>
 
 <div class="hero headings" style="text-align:center;">
-        <h3>Dising Team</h3>
+        <h3>Disigner Team</h3>
         <h4>Colaboradores con el diseño gráfico y publicitario.</h4>
     </div>
 
@@ -202,7 +210,7 @@
             <div class="ch-item ch-img-21">
               <div class="ch-info">
                 <h3>Ernesto</h3>
-                <p>Tarrillo Pérez<a href="http://gplus.to/ernestotarrillo">Colaborador</a></p>
+                <p>Tarrillo Pérez<a href="http://gplus.to/ernestotarrillo" target="_blank">Colaborador</a></p>
               </div>
             </div>
           </li>
@@ -211,7 +219,7 @@
             <div class="ch-item ch-img-22">
               <div class="ch-info">
                 <h3>Laura</h3>
-                <p>Cardenas<a href="http://gplus.to/lauracardenas">Colaboradora</a></p>
+                <p>Cardenas<a href="http://gplus.to/lauracardenas" target="_blank">Colaboradora</a></p>
               </div>
             </div>
           </li>
@@ -228,7 +236,7 @@
             <div class="ch-item ch-img-6">
               <div class="ch-info">
                 <h3>Roxana</h3>
-                <p>Panaqué Cávana<a href="http://gplus.to/rbpanaque">GDGLima</a></p>
+                <p>Panaqué Cávana<a href="http://gplus.to/rbpanaque" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -236,7 +244,7 @@
             <div class="ch-item ch-img-12">
               <div class="ch-info">
                 <h3>Alvaro</h3>
-                <p>Gonzales Lluncor<a href="http://gplus.to/agonzalesll">GDGLima</a></p>
+                <p>Gonzales Lluncor<a href="http://gplus.to/agonzalesll" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -244,7 +252,7 @@
             <div class="ch-item ch-img-18">
               <div class="ch-info">
                 <h3>Jimmy</h3>
-                <p>Granados<a href="http://goo.gl/5yDp1">GDGLima</a></p>
+                <p>Granados<a href="http://goo.gl/5yDp1" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -252,7 +260,7 @@
             <div class="ch-item ch-img-16">
               <div class="ch-info">
                 <h3>Milton</h3>
-                <p>Yarleque<a href="http://gplus.to/myarleque">GDGLima</a></p>
+                <p>Yarleque<a href="http://gplus.to/myarleque" target="_blank">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -319,13 +327,13 @@
     <footer>
 
       <p class="pull-left">
-        <a href="#">@2013 GDGLima</a>
+        <a href="#">Hashtag del evento:</a>
         <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |-->
         <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
         <a href="#" target="new">Back to top</a>
       </p>
