--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -163,13 +163,13 @@
     <footer>
 
       <p class="pull-left">
-        <a href="#">@2013 GDGLima</a>
+        <a href="#">Hashtag del evento:</a>
         <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |-->
         <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
         <a href="#" target="new">Back to top</a>
       </p>
