--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
 
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="#AndroidTourPeru #GDGLima #GDGArequipa con #DavidChandler" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru">Twittear</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> <b>Hashtags Oficiales</b><b style="color:#4d8cf6;">
-#AndroidTourPeru - #GDGLima - #GDGArequipa</b>
+#AndroidTourPeru - #GDGLima - #GDGArequipa</b><br><br>
+<a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Sigue el evento por <b>Google+</b></a>
+
+
 </div>
 
    </a><br>
