--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
           <a  href="https://twitter.com/share" data-text="#AndroidTourPeru" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru" target="blank">
             <b style="color:#4d8cf6;">
 #AndroidTourPeru</b>
-</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> </div>
+</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<a  href="https://twitter.com/share" data-text="#GDGLima" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru" target="blank">
+            <b style="color:#4d8cf6;">
+#GDGLima</b>
+</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+ </div>
 <br>
       <!-- Example row of columns -->
       <div class="container">
@@ -170,7 +176,7 @@
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="#AndroidTourPeru #GDGLima #GDGArequipa con #DavidChandler" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru">Twittear</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> <b>Hashtags Oficiales</b><b style="color:#4d8cf6;">
 #AndroidTourPeru - #GDGLima - #GDGArequipa</b><br><br>
-<a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Sigue el evento por <b>Google+</b></a>
+<a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Sigue el evento en vivo en <b>Google+</b></a>
 
 
 </div>
