--- a/nav_team.html
+++ b/nav_team.html
@@ -202,7 +202,7 @@
 <br>
 
 <div class="hero headings" style="text-align:center;">
-        <h3>Disigner Team</h3>
+        <h3>Designer Team</h3>
         <h4>Colaboradores con el diseño gráfico y publicitario.</h4>
     </div>
 
