--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="row text-center">
             <div class="span4">
               <h2>GDG Android Tour</h2>
-              <p>¿Que es el GDG Android Tour?</p>
+              <p>¿Qué es el GDG Android Tour?</p>
               <a  href="nav_androidtour.html">Detalle &raquo;</a>
 
             </div>
@@ -135,7 +135,7 @@
 
             <div class="span4">
               <h2>Expositores</h2>
-              <p>¿ Qu&#237;enes exponen ?</p>
+              <p>¿Quiénes expondrán?</p>
               <a  href="nav_speaker.html">Detalle &raquo;</a>
             </div>
           </div>
@@ -216,15 +216,16 @@
     <footer>
 
       <p class="pull-left">
-        <a href="#">Hashtag del evento:</a>
-        <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
+        <a href="https://twitter.com/share">¿Quieres aparecer arriba en los círculos?, envía un tweet con el hashtag:</a>
+        <a  href="https://twitter.com/share" data-text="#AndroidTourPeru" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru" target="blank">
+            <b style="color:#4d8cf6;">
+#AndroidTourPeru #GDGLima</b>
+</a>
+
       </p>
 
       <p class="pull-right">
-        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> | -->
-        <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
-        <a href="#" target="new">Back to top</a>
+       <a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Sigue el evento en vivo en <b>Google+</b></a>
       </p>
 
     </footer>
