--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -92,7 +92,7 @@
 	        </div>
 		</div>
 	    <div class="hero headings">
-	        <h3>¿Que es el GDG Android Tour?</h3>
+	        <h3>¿Qué es el GDG Android Tour?</h3>
 	    </div>
 
 <div class="container">
@@ -134,7 +134,7 @@
             <div class="row">
 
               <div class="span9">
-                <p>Estos eventos ser&aacute;n realizados ante la llegada de <strong><a href="http://plus.google.com/102717421433762219474" target="_new">+David Chandler</a>, Developer Advocate de Google</strong>, expositor oficial del <b>Google I/O</b> y uno de los gurús más reconocidos en el mundo de Android, quien estar&aacute; visitando Per&uacute; por primera vez y podr&aacute;  compartir conocimiento y temas con la comunidad de desarrollo m&oacute;vil en Per&uacute;. </p>
+                <p>Estos eventos ser&aacute;n realizados ante la llegada de <strong><a href="http://plus.google.com/102717421433762219474" target="_new">+David Chandler</a>, Developer Advocate de Google</strong>, expositor oficial del <b>Google I/O</b> y uno de los gurús más reconocidos en el mundo de Android, quien estar&aacute; visitando Per&uacute; por primera vez y podr&aacute;  compartir conocimiento y temas con la comunidad de desarrollo m&oacute;vil en nuestro país. </p>
               </div>
             </div>
 
@@ -145,18 +145,19 @@
 <br><br>
 
     <!-- FOOTER -->
-    <footer>
+      <footer>
 
       <p class="pull-left">
-        <a href="#">Hashtag del evento:</a>
-        <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
+        <a href="https://twitter.com/share">¿Quieres aparecer arriba en los círculos?, envía un tweet con el hashtag:</a>
+        <a  href="https://twitter.com/share" data-text="#AndroidTourPeru" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru" target="blank">
+            <b style="color:#4d8cf6;">
+#AndroidTourPeru #GDGLima</b>
+</a>
+
       </p>
 
       <p class="pull-right">
-        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> | -->
-        <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
-        <a href="#" target="new">Back to top</a>
+       <a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Sigue el evento en vivo en <b>Google+</b></a>
       </p>
 
     </footer>
