--- a/nav_programa.html
+++ b/nav_programa.html
@@ -146,7 +146,7 @@
         <h3>De 3:00PM a 8:30PM</h3>
         <h4>Facultad de Ingeniería - Universidad San Martín de Porres USMP</h4>
         <h4>Registro: <a href="http://androidtourperu.eventbrite.com/" target="_blank">androidtourperu.eventbrite.com</a></h4>
-        <h3>Los detalles de este programa, se estarán publicando próximamente, gracias por la espera!</h3>
+        <h3>Los detalles de este programa, se estarán publicando próximamente. ¡Gracias por la espera!</h3>
     </div>
 
     <div class="container speakers text-center">
@@ -210,18 +210,19 @@
 
     <br><br>
     <!-- FOOTER -->
-    <footer>
+     <footer>
 
       <p class="pull-left">
-        <a href="#">Hashtag del evento:</a>
-        <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
+        <a href="https://twitter.com/share">¿Quieres aparecer arriba en los círculos?, envía un tweet con el hashtag:</a>
+        <a  href="https://twitter.com/share" data-text="#AndroidTourPeru" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru" target="blank">
+            <b style="color:#4d8cf6;">
+#AndroidTourPeru #GDGLima</b>
+</a>
+
       </p>
 
       <p class="pull-right">
-        <!--<a href="https://twitter.com/gdglima" target="new">Twitter</a> |
-        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |-->
-        <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
-        <a href="#" target="new">Back to top</a>
+       <a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Sigue el evento en vivo en <b>Google+</b></a>
       </p>
 
     </footer>
