--- a/nav_programa.html
+++ b/nav_programa.html
@@ -222,7 +222,7 @@
       </p>
 
       <p class="pull-right">
-       <a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Sigue el evento en vivo en <b>Google+</b></a>
+       <a href="https://plus.google.com/u/0/events/c3s0aq4fjlrpbt86s4i6vt3j53c" target="blank">Síguenos en vivo! por <b>Google+</b></a>
       </p>
 
     </footer>
