--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -256,7 +256,10 @@
               <h4>Android Developer (Invitado)</h4>
               <div class="hr"><hr /></div>
               <p>
-              Invitado especial.</p>
+              Ingeniero Informático de la Pontificia Universidad Católica del Perú
+Experto en desarrollo de aplicaciones móviles utilizando las tecnologías J2ME, Blackberry, iOS y Android y en gestión de emprendimientos tecnológicos.
+Gerente General de la empresa DEVOS INC especializada en el desarrollo de soluciones móviles. 
+Ha sido docente en la Universidad de Lima, Pontificia Universidad Católica del Perú y en la Universidad Ricardo Palma.</p>
 
 
 
