--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
             <b style="color:#4d8cf6;">
 #GDGLima</b>
 </a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
+<a  href="https://twitter.com/share" data-text="#GDGArequipa" data-via="gdgarequipa" data-lang="es" data-hashtags="GDGArequipa" target="blank">
+            <b style="color:#4d8cf6;">
+#GDGArequipa</b>
+</a>
  </div>
 <br>
       <!-- Example row of columns -->
@@ -259,5 +262,17 @@
 
     <script type="text/javascript" src="js/navigation.js"></script>
 
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-39704344-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </body>
 </html>
