--- a/nav_programa.html
+++ b/nav_programa.html
@@ -101,8 +101,8 @@
     <div class="container speakers text-center">
     	<table class="table table-bordered">
     		<thead>
-				<tr>
-					<th>Hora (PM)</th>
+				<tr style="background-color: #f2f2f2;">
+					<th>HORA (PM)</th>
 					<th>&nbsp;</th>
 				</tr>
     		</thead>
@@ -118,7 +118,7 @@
 				<tr>
 					<td>
 						<span>8:00 a 9:00</span></td>
-					<td>
+					<td style="background-color: #e6b0b0;">
 						<span>Google Tools for Entrepreneurs con David Chandler</span>
 					</td>
 				</tr>
@@ -149,7 +149,7 @@
     <div class="container speakers text-center">
       <table width="114%" height="385" class="table table-bordered">
         <thead>
-       <tr style="background-color:#FF3;">
+       <tr style="background-color: #f2f2f2;">
           <th width="20%">Hora (PM)</th>
           <th width="30%"><div align="center">Auditorio Primus Inter Pares (Nº 1)</div></th>
           <th width="27%"><div align="center">Auditorio FIA-DATA (Nº 2)</div></th>
@@ -179,10 +179,10 @@
           <td>
             <span>3:20 a 4:20</span>
           </td>
-          <td><div align="center"><b style="color:#F00;">+David Chandler</b><br> 
+          <td style="background-color: #e6b0b0;"><div align="center"><b style="color:#F00;">+David Chandler</b><br> 
           What's New In JellyBean 4.2. This talk covers new features, new APIs, and improvements to ADT in the latest JellyBean release</div></td>
-          <td><div align="center">HO</div></td>
-          <td>
+          <td style="background-color: #e6b0b0;"><div align="center">HO</div></td>
+          <td style="background-color: #e6b0b0;">
             <div align="center"><span>HO</span>
           </div></td>
         </tr>
@@ -191,18 +191,17 @@
           <td>
             <span>4:20 a 5:10</span>
           </td>
-          <td><div align="center">Android Para Diseñadores<br> <b>Eduardo Medina (GDGLima) </b></div></td>
-          <td><div align="center">Evaluando JSON y XML como formato de transmisión en Android<br><b>Armando Chirinos (GDGLima)</b></div></td>
+          <td><div align="center">Google API Oauth2 + Android. <br>Bases de Datos Difusas (FSQL) <br><b>Diego Urbina (GDGLima)</b></div></td>
+          <td><div align="center">Introducción al Desarrollo Móvil con Android <br><b>Roxana Panaqué &amp; Wendy Morales (GDGWomenLima)</b></div></td>
           <td>
-            <div align="center"><span>Experiencia en Dipoo<br><b>Juan Carlos Ferro (Invitado)</b></span>
-          </div></td>
+            <div align="center">Android Para Diseñadores<br> <b>Eduardo Medina (GDGLima) </b></div></td>
         </tr>
 
         <tr>
           <td>5:10 a 5:50</td>
-          <td><div align="center">Gobierna tu casa con aplicaciones Android <br><b>Federico Castoldi GDG Santa Fé </b><b style="color:#06F;">(vía HO)</b></div></td>
-          <td><div align="center">APIs JSON con Android <br><b>Adrían Catalán GDG Guatemala </b><b style="color:#06F;">(vía HO)</b></div></td>
-          <td><div align="center">Como desarrollé el App del Evento utilizando Storm <br><b>Eduardo Medina (GDGLima)</b></div></td>
+          <td><div align="center">Evaluando JSON y XML como formato de transmisión en Android<br><b>Armando Chirinos (GDGLima)</b></div></td>
+          <td style="background-color: #a0bdd1;"><div align="center">Gobierna tu casa con aplicaciones Android <br><b>Federico Castoldi GDG Santa Fé </b><br><b style="color:#06F;">(vía HO)</b></div></td>
+          <td style="background-color: #a0bdd1;"><div align="center">APIs JSON con Android <br><b>Adrían Catalán GDG Guatemala </b><b style="color:#06F;">(vía HO)</b></div></td>
         </tr>
         <tr>
           <td>5:50 a 6:10</td>
@@ -210,17 +209,18 @@
           </tr>
         <tr>
           <td>6:10 a 6:50</td>
+          <td><div align="center">Integración de Storm con proyecto Android<br><b>Eduardo Medina (GDGLima)</b></div></td>
+          <td><div align="center"><span>Experiencia en Dipoo<br><b>Juan Carlos Ferro (Invitado)</b></span>
+          </div></td>
           <td><div align="center">Realidad Aumentada en Android <br><b>Hernán Quintana (Invitado)</b></div></td>
-          <td><div align="center">Introducción al Desarrollo Móvil con Android <br><b>Roxana Panaqué &amp; Wendy Morales (GDGWomenLima)</b></div></td>
-          <td><div align="center">Google API Oauth2 + Android. <br>Bases de Datos Difusas (FSQL) <br><b>Diego Urbina (GDGLima)</b></div></td>
         </tr>
         <tr>
           <td>7:00 a 8:00</td>
-          <td><div align="center"><b style="color:#F00;">+David Chandler</b><br> 
+          <td style="background-color: #e6b0b0;"><div align="center"><b style="color:#F00;">+David Chandler</b><br> 
             Project stORM: and open source ORM for Android. This talk introduces one of my personal projects, a framework to simplify using the SQLite database on Android.
 </div></td>
-          <td><div align="center">HO</div></td>
-          <td><div align="center">HO</div></td>
+          <td style="background-color: #e6b0b0;"><div align="center">HO</div></td>
+          <td style="background-color: #e6b0b0;"><div align="center">HO</div></td>
         </tr>
         <tr>
           <td>8:00 a 8:30</td>
