--- a/nav_programa.html
+++ b/nav_programa.html
@@ -151,9 +151,9 @@
         <thead>
        <tr style="background-color: #f2f2f2;">
           <th width="20%">Hora (PM)</th>
-          <th width="30%"><div align="center">Auditorio Primus Inter Pares (Nº 1)</div></th>
-          <th width="27%"><div align="center">Auditorio FIA-DATA (Nº 2)</div></th>
-          <th width="23%"><div align="center">Aula (Nº 3)</div></th>
+          <th width="30%"><div align="center">AUDITORIO PRIMUS INTER PARES (Nº 1)</div></th>
+          <th width="27%"><div align="center">AUDITORIO FIA-DATA (Nº 2)</div></th>
+          <th width="23%"><div align="center">AULA(Nº 3)</div></th>
         </tr>
         </thead>
         <tbody>
